...
        android:text="@string/_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt8"/>

    <TextView
        android:id="@+id/calculator_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
...
        android:layout_marginTop="8dp"
        android:text="@string/is"
        app:layout_constraintStart_toEndOf="@+id/btDiv"
        app:layout_constraintTop_toBottomOf="@+id/bt0"/>

    <Button
        android:id="@+id/btClearLast"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/clear"
        app:layout_constraintTop_toBottomOf="@+id/bt0"
        tools:layout_editor_absoluteX="308dp"/>
...
